fix(vertx): VertxHttpClient uses exclusive Vert.x instance by default
A shared Vert.x instance can still be provided to the VertxHttpClientFactory.

This instance will be shared across the different VertxHttpClient instances.

It's responsibility of the user to handle the Vert.x shared instance lifecycle

Signed-off-by: Marc Nuri <marc@marcnuri.com>